translating part 4 + detectLanguage api deleted + crud moved
translating part 4 + detectLanguage api deleted + crud moved

--- a/GeostoreFX/src/main/resources/org/languages/language_en.properties
+++ b/GeostoreFX/src/main/resources/org/languages/language_en.properties
@@ -12,6 +12,9 @@ prepage.login.admin=SIGN IN AS ADMIN
 prepage.login.user=SIGN IN AS USER
 
 ##pagina di accesso
+access.register.title=Create a new profile and enjoy Geostore services
+access.login.user.title=Log in as a user and enjoy Geostore services
+access.login.admin.title=Log in as an admin and enjoy Geostore services
 access.name=Name
 access.surname=Surname
 access.sex=Sex
@@ -22,3 +25,8 @@ access.email=Email
 access.password=Password
 access.confPassword=Confirm password
 access.code=Admin code
+access.register.button=SIGN UP
+access.login.button=SIGN IN
+
+##scelta tra registrare o accedere
+language.title=Choose language
