--- a/GeostoreFX/src/main/resources/org/languages/language_ja.properties
+++ b/GeostoreFX/src/main/resources/org/languages/language_ja.properties
@@ -12,6 +12,9 @@ prepage.login.admin=管理者としてログインする
 prepage.login.user=顧客としてログイン
 
 ##pagina di accesso
+access.register.title=新規プロフィールを作成し、ジオストアのサービスをお楽しみください。
+access.login.user.title=お客様としてログインし、ジオストアのサービスをお楽しみください。
+access.login.admin.title=管理者としてログインし、ジオストアのサービスをお楽しみください。
 access.name=氏名
 access.surname=苗字
 access.sex=性別
@@ -22,3 +25,8 @@ access.email=Eメール
 access.password=パスワード
 access.confPassword=パスワード確認
 access.code=管理者コード
+access.register.button=登録
+access.login.button=ログイン
+
+##scelta tra registrare o accedere
+language.title=言語を選択
