--- a/GeostoreFX/src/main/resources/org/languages/language_it.properties
+++ b/GeostoreFX/src/main/resources/org/languages/language_it.properties
@@ -8,10 +8,13 @@ prepage.title=Un programma che ti permette di simulare lo store virtuale
 prepage.register.title=Non hai un account?
 prepage.login.title=Hai già un account?
 prepage.register=REGISTRATI
-prepage.login.admin=ACCEDI COME AMMINISTRATORE
+prepage.login.admin=ACCEDI COME ADMIN
 prepage.login.user=ACCEDI COME CLIENTE
 
 ##pagina di accesso
+access.register.title=Crea un nuovo profilo e potrai usufruire i servizi Geostore
+access.login.user.title=Accedi come cliente e potrai usufruire i servizi Geostore
+access.login.admin.title=Accedi come admin e potrai usufruire i servizi Geostore
 access.name=Nome
 access.surname=Cognome
 access.sex=Sesso
@@ -22,3 +25,8 @@ access.email=Email
 access.password=Password
 access.confPassword=Conferma password
 access.code=Codice admin
+access.register.button=REGISTRATI
+access.login.button=ACCEDI
+
+##scelta tra registrare o accedere
+language.title=Scegli la lingua
