--- a/GeostoreFX/src/main/resources/org/languages/language.properties
+++ b/GeostoreFX/src/main/resources/org/languages/language.properties
@@ -14,7 +14,7 @@ prepage.login.user=ACCEDI COME CLIENTE
 ##pagina di accesso
 access.register.title=Crea un nuovo profilo e potrai usufruire i servizi Geostore
 access.login.user.title=Accedi come cliente e potrai usufruire i servizi Geostore
-access.login.admin.title=Accedi come admin e potrai usufruire i servizi Geostore
+access.login.admin.title=Accedi come admin e potrai gestire i servizi Geostore
 access.name=Nome
 access.surname=Cognome
 access.sex=Sesso
@@ -28,5 +28,7 @@ access.code=Codice admin
 access.register.button=REGISTRATI
 access.login.button=ACCEDI
 
-##scelta tra registrare o accedere
+##cambio lingua
 language.title=Scegli la lingua
+
+##messaggi di caricamento
